--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
   <meta name="keywords" content="техосмотр, Уфа, БАШСНАБГАЗ, диагностическая карта, ОСАГО, транспорт, технический осмотр">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "ООО БАШСНАБГАЗ",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "ул. Цветочная, 1/4",
+      "addressLocality": "Уфа",
+      "addressCountry": "RU"
+    },
+    "telephone": "+79272351405",
+    "email": "to1629271@gmail.com",
+    "openingHours": "Mo-Fr 08:00-19:00, Sa 08:00-15:00",
+    "url": "https://ВАШ_САЙТ.РУ"
+  }
+  </script>
   <style>
     :root {
       --green: #11a021;
@@ -46,68 +63,7 @@
       text-align: left;
     }
     .pattern-wrap {width:100%;height:60px;position:relative;overflow:hidden;margin-top:-9px;z-index:1;line-height:0;}
-    nav.navbar {
-      background:var(--white);
-      box-shadow:0 3px 10px #0001;
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      height:var(--menu-height);
-      gap:32px;
-      font-weight:bold;
-      font-size:1.09em;
-      position:sticky;
-      top:0;
-      z-index:10;
-    }
-    nav.navbar a {
-      color:var(--green);
-      text-decoration:none;
-      padding:9px 18px;
-      border-radius:6px;
-      transition:background .18s, color .18s;
-    }
-    nav.navbar a:hover,nav.navbar a.active{background:var(--green);color:var(--white);}
-    .btn-signup {
-      background: var(--green);
-      color: #fff !important;
-      border-radius: 8px;
-      padding: 9px 25px !important;
-      margin-left: 14px;
-      box-shadow: 0 3px 12px #26c47a23;
-      font-weight: bold;
-      transition: background .16s, color .16s, box-shadow .2s;
-      border: 2px solid var(--green);
-    }
-    .btn-signup:hover {
-      background: #fff !important;
-      color: var(--green) !important;
-      border: 2px solid var(--green);
-    }
-    @media (max-width:900px){
-      nav.navbar {
-        flex-direction: column;
-        gap: 0;
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 100vh;
-        width: 84vw;
-        max-width: 340px;
-        background: var(--white);
-        align-items: flex-start;
-        padding: 80px 30px 32px 22px;
-        transform: translateX(-110%);
-        transition: transform .35s cubic-bezier(.77,0,.18,1);
-        box-shadow: 0 0 0 100vw rgba(0,0,0,0.32);
-        z-index: 1200;
-      }
-      nav.navbar.open {transform: translateX(0);}
-      nav.navbar a {width:100%;display:block;padding:16px 8px;margin:0 0 8px 0;font-size:1.21em;}
-    }
-    @media (min-width:901px){
-      nav.navbar {display:flex !important; position:sticky; top:0;}
-    }
+    /* Бургер-меню стили */
     .burger {
       display: none;
       position: absolute;
@@ -115,7 +71,7 @@
       top: 18px;
       width: 40px;
       height: 40px;
-      z-index: 1500;
+      z-index: 101;
       background: none;
       border: none;
       cursor: pointer;
@@ -133,15 +89,71 @@
     }
     @media (max-width:900px){
       .burger {display: flex;}
+      nav.navbar {
+        display: none;
+        position: fixed;
+        left: 0; top: 0;
+        width: 80vw;
+        max-width: 330px;
+        height: 100vh;
+        background: var(--white);
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 40px 32px 24px 24px;
+        box-shadow: 0 0 0 100vw rgba(0,0,0,0.32);
+        gap: 0;
+        z-index: 100;
+        transform: translateX(-100%);
+        transition: transform .33s cubic-bezier(.77,0,.18,1);
+      }
+      nav.navbar.open {
+        display: flex;
+        transform: translateX(0);
+      }
+      nav.navbar a {
+        display: block;
+        margin: 0 0 24px 0;
+        font-size: 1.21em;
+        padding: 12px 0 12px 8px;
+        width: 100%;
+        color: var(--green);
+      }
+      .burger-bg {
+        display: none;
+        position: fixed;
+        z-index: 99;
+        left: 0; top: 0; width: 100vw; height: 100vh;
+        background: rgba(44,70,48,0.37);
+      }
+      .burger-bg.show { display: block;}
     }
-    .burger-bg {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      left: 0; top: 0; width: 100vw; height: 100vh;
-      background: rgba(44,70,48,0.37);
+    @media (min-width:901px){
+      .burger {display: none;}
+      nav.navbar {display: flex !important; position:sticky; top:0;}
+      .burger-bg {display: none !important;}
     }
-    .burger-bg.show { display: block;}
+    nav.navbar {background:var(--white);box-shadow:0 3px 10px #0001;display:flex;justify-content:center;align-items:center;height:var(--menu-height);gap:32px;font-weight:bold;font-size:1.09em;position:sticky;top:0;z-index:10;}
+    nav.navbar a {color:var(--green);text-decoration:none;padding:9px 18px;border-radius:6px;transition:background .18s, color .18s;}
+    nav.navbar a:hover,nav.navbar a.active{background:var(--green);color:var(--white);}
+    .btn-signup {
+      background: var(--green);
+      color: #fff !important;
+      border-radius: 8px;
+      padding: 9px 25px !important;
+      margin-left: 14px;
+      box-shadow: 0 3px 12px #26c47a23;
+      font-weight: bold;
+      transition: background .16s, color .16s, box-shadow .2s;
+      border: 2px solid var(--green);
+    }
+    .btn-signup:hover {
+      background: #fff !important;
+      color: var(--green) !important;
+      border: 2px solid var(--green);
+    }
+    @media (max-width:600px){
+      .btn-signup { padding: 7px 8vw !important; font-size:1.1em;}
+    }
     .container{max-width:1100px;margin:0 auto;padding:0 16px;}
     .hero-row{
       display: flex;
@@ -350,8 +362,8 @@
       animation: zoomin .28s;
     }
     @keyframes zoomin {
-      from { transform: scale(0.82);}
-      to { transform: scale(1);}
+      from { transform: scale(0.82); }
+      to { transform: scale(1); }
     }
     .doc-modal-caption {
       color: #fff;
@@ -400,15 +412,6 @@
       <img src="logo.jfif" alt="Логотип" class="main-logo">
       <span class="org-title">ООО "БАШСНАБГАЗ"</span>
     </div>
-    <nav class="mobile-navbar" id="mobileNav">
-      <a href="#services">Услуги</a>
-      <a href="#prices">Цены</a>
-      <a href="#about-inspection">О техосмотре</a>
-      <a href="#steps">Этапы</a>
-      <a href="#faq">Вопросы</a>
-      <a href="#contacts">Контакты</a>
-      <a href="#form" class="btn-signup">Записаться</a>
-    </nav>
     <button class="burger" id="burger" aria-label="Открыть меню">
       <span class="burger-bar"></span>
       <span class="burger-bar"></span>
@@ -445,6 +448,16 @@
       </svg>
     </div>
   </header>
+  <nav class="navbar" id="mainNav">
+    <a href="#services">Услуги</a>
+    <a href="#prices">Цены</a>
+    <a href="#about-inspection">О техосмотре</a>
+    <a href="#steps">Этапы</a>
+    <a href="#faq">Вопросы</a>
+    <a href="#contacts">Контакты</a>
+    <a href="#form" class="btn-signup">Записаться</a>
+  </nav>
+  <div class="burger-bg" id="burgerBg"></div>
   <div class="container">
     <div class="hero-row">
       <div class="hero-main" data-aos="fade-right">
@@ -507,59 +520,106 @@
         <iframe class="map" src="https://yandex.ru/map-widget/v1/?ll=56.072328%2C54.805951&z=17&l=map&pt=56.072328,54.805951,pm2gnm" loading="lazy"></iframe>
       </div>
     </div>
-        <div class="faq-item" data-aos="fade-up" data-aos-delay="130">
-          <div class="faq-q">Что необходимо для прохождения техосмотра?</div>
-          <span class="faq-toggle">+</span>
-          <div class="faq-a">
-            <ul>
-              <li>Паспорт гражданина РФ</li>
-              <li>СТС или ПТС</li>
-              <li>Доверенность (если вы не владелец)</li>
-              <li>Оплата услуги</li>
-              <li>Чистое ТС — для быстрой диагностики</li>
-            </ul>
-            При подаче заявки онлайн оператор сам подскажет детали.
-          </div>
+    <section id="services" class="section" data-aos="fade-up">
+      <div class="section-title" data-aos="zoom-in">Категории транспортных средств</div>
+      <div class="cards-list">
+        <div class="card" data-aos="fade-up" data-aos-delay="50"><i class="fas fa-motorcycle"></i>
+          <h3>A – L</h3>
+          <p>Мотоциклы, мопеды и скутеры</p>
         </div>
-        <div class="faq-item" data-aos="fade-up" data-aos-delay="160">
-          <div class="faq-q">Что проверяют при техосмотре?</div>
-          <span class="faq-toggle">+</span>
-          <div class="faq-a">
-            <ul>
-              <li>Работу тормозной системы</li>
-              <li>Световые приборы, стеклоочистители</li>
-              <li>Ремни безопасности, подушки</li>
-              <li>Шины, протектор</li>
-              <li>Отсутствие течей и коррозии</li>
-              <li>Работу двигателя, подвески, рулевого управления</li>
-            </ul>
-            По результатам выдается диагностическая карта.
-          </div>
+        <div class="card" data-aos="fade-up" data-aos-delay="100"><i class="fas fa-car"></i>
+          <h3>B – M1</h3>
+          <p>Легковые (до 8 мест)</p>
         </div>
-        <div class="faq-item" data-aos="fade-up" data-aos-delay="190">
-          <div class="faq-q">Что делать при утере диагностической карты?</div>
-          <span class="faq-toggle">+</span>
-          <div class="faq-a">
-            Карта восстанавливается через обращение к любому аккредитованному оператору или онлайн по VIN-номеру через реестр ЕАИСТО.<br>
-            При утере бумажного экземпляра — информация всегда доступна в электронной базе.
-          </div>
-        </div>
-        <div class="faq-item" data-aos="fade-up" data-aos-delay="220">
-          <div class="faq-q">Где проверить действительность карты?</div>
-          <span class="faq-toggle">+</span>
-          <div class="faq-a">
-            Проверить действительность карты можно на сайте <a href="https://gibdd.ru" target="_blank" style="color:var(--green);">gibdd.ru</a> по VIN или номеру кузова.
-          </div>
-        </div>
-        <div class="faq-item" data-aos="fade-up" data-aos-delay="250">
-          <div class="faq-q">Можно ли пройти техосмотр вне места регистрации автомобиля?</div>
-          <span class="faq-toggle">+</span>
-          <div class="faq-a">
-            Да, вы можете пройти техосмотр в любом регионе России, независимо от регистрации вашего ТС.
-          </div>
+        <div class="card" data-aos="fade-up" data-aos-delay="150"><i class="fas fa-truck"></i>
+          <h3>N1</h3>
+          <p>Грузовые до 3,5 т</p>
         </div>
       </div>
     </section>
+    <section id="prices" class="section" data-aos="fade-up">
+      <div class="section-title" data-aos="zoom-in">Стоимость техосмотра</div>
+      <div class="prices-table">
+        <table>
+          <tr>
+            <th>Категория</th>
+            <th>Цена</th>
+            <th>Время</th>
+          </tr>
+          <tr>
+            <td class="cat">A, L</td>
+            <td>364,07 ₽</td>
+            <td>10 мин</td>
+          </tr>
+          <tr>
+            <td class="cat">B, M1</td>
+            <td>1050,79 ₽</td>
+            <td>30 мин</td>
+          </tr>
+          <tr>
+            <td class="cat">N1</td>
+            <td>1133,04 ₽</td>
+            <td>32 мин</td>
+          </tr>
+        </table>
+      </div>
+      <div style="color:#444;text-align:center;font-size:1em;opacity:.77;">Цены по постановлению №554 от 28.12.2024</div>
+    </section>
+    <section id="about-inspection" class="section" data-aos="fade-up">
+      <div class="section-title" data-aos="zoom-in">О техосмотре</div>
+      <div style="max-width:760px;margin:0 auto 32px auto;line-height:1.6;font-size:1.12em;color:#333;opacity:.94;">
+        Все находящиеся в эксплуатации дорожные транспортные средства должны регулярно проходить технический осмотр для проверки соответствия технического состояния и оборудования транспортных средств требованиям безопасности дорожного движения.<br><br>
+        <b>Куда обратиться?</b> Техосмотр проводится организацией (оператором технического осмотра), прошедшим аккредитацию по проведению технического осмотра соответствующей категории транспортных средств. Проводит аккредитацию профессиональное объединение страховщиков. Граждане и юридические лица вправе обратиться к любому оператору независимо от места регистрации транспортного средства.
+      </div>
+    </section>
+    <!-- БЛОК ЭТАПОВ -->
+    <section id="steps" class="section" data-aos="fade-up">
+      <div class="section-title" data-aos="zoom-in">Как проходит техосмотр?</div>
+      <div class="cards-list" style="gap:32px;">
+        <div class="card" data-aos="fade-up" data-aos-delay="50">
+          <i class="fas fa-edit"></i>
+          <h3>1. Оставьте заявку</h3>
+          <p>Заполните простую форму на сайте или напишите нам в WhatsApp.</p>
+        </div>
+        <div class="card" data-aos="fade-up" data-aos-delay="100">
+          <i class="fas fa-comment-dots"></i>
+          <h3>2. Подтвердите время</h3>
+          <p>Мы свяжемся с вами для подтверждения даты и времени осмотра.</p>
+        </div>
+        <div class="card" data-aos="fade-up" data-aos-delay="150">
+          <i class="fas fa-car-side"></i>
+          <h3>3. Приезжайте на пункт</h3>
+          <p>Приезжайте по адресу: Цветочная, 1/4. Наши специалисты всё объяснят.</p>
+        </div>
+        <div class="card" data-aos="fade-up" data-aos-delay="200">
+          <i class="fas fa-file-signature"></i>
+          <h3>4. Получите карту</h3>
+          <p>Через 30 минут получите официальную диагностическую карту для ОСАГО.</p>
+        </div>
+      </div>
+    </section>
+    <section id="faq" class="section" data-aos="fade-up">
+      <div class="section-title" data-aos="zoom-in">Часто задаваемые вопросы</div>
+      <div class="faq">
+        <div class="faq-item" data-aos="fade-up" data-aos-delay="70">
+          <div class="faq-q">Кто обязан проходить техосмотр?</div>
+          <span class="faq-toggle">+</span>
+          <div class="faq-a">
+            Техосмотр обязателен для всех транспортных средств, используемых на дорогах общего пользования, кроме новых легковых автомобилей младше 4 лет и мотоциклов младше 4 лет.<br>
+            Коммерческие, грузовые автомобили, такси и автобусы проходят ТО ежегодно.
+          </div>
+        </div>
+        <div class="faq-item" data-aos="fade-up" data-aos-delay="100">
+          <div class="faq-q">Как часто нужно проходить техосмотр?</div>
+          <span class="faq-toggle">+</span>
+          <div class="faq-a">
+            <ul>
+              <li>Легковые и мотоциклы: впервые через 4 года, далее — раз в 2 года</li>
+              <li>Грузовые, автобусы, такси: ежегодно</li>
+            </ul>
+            Даты могут меняться в зависимости от возраста и типа транспортного средства.
+          </div>
+        </div>
         <div class="faq-item" data-aos="fade-up" data-aos-delay="130">
           <div class="faq-q">Что необходимо для прохождения техосмотра?</div>
           <span class="faq-toggle">+</span>
@@ -734,29 +794,28 @@
     }
   </script>
   <script>
-    // Меню на мобильных (слайдер вместо бургера)
-    const nav = document.getElementById('mainNav');
-    const navOverlay = document.createElement('div');
-    navOverlay.className = "burger-bg";
-    document.body.appendChild(navOverlay);
-
-    document.getElementById('burger').onclick = function() {
-      nav.classList.toggle('open');
-      navOverlay.classList.toggle('show');
+    // Управление бургер-меню
+    const burger = document.getElementById('burger');
+    const mainNav = document.getElementById('mainNav');
+    burger.onclick = function() {
+      mainNav.classList.toggle('open');
       document.body.classList.toggle('menu-open');
+      burger.classList.toggle('active');
     };
-    nav.querySelectorAll('a').forEach(link => {
+    mainNav.querySelectorAll('a').forEach(link => {
       link.onclick = function() {
-        nav.classList.remove('open');
-        navOverlay.classList.remove('show');
+        mainNav.classList.remove('open');
         document.body.classList.remove('menu-open');
+        burger.classList.remove('active');
       };
     });
-    navOverlay.onclick = function() {
-      nav.classList.remove('open');
-      navOverlay.classList.remove('show');
-      document.body.classList.remove('menu-open');
-    };
+    document.addEventListener('click', function(e){
+      if(mainNav.classList.contains('open') && !mainNav.contains(e.target) && e.target!==burger && !burger.contains(e.target)){
+        mainNav.classList.remove('open');
+        document.body.classList.remove('menu-open');
+        burger.classList.remove('active');
+      }
+    });
   </script>
 </body>
 </html>
