--- a/index.html
+++ b/index.html
@@ -693,42 +693,42 @@
         <iframe src="https://yandex.ru/map-widget/v1/?ll=56.072328%2C54.805951&z=17&l=map&pt=56.072328,54.805951,pm2gnm" loading="lazy"></iframe>
       </div>
     </section>
-    <section id="legal-docs" class="section" data-aos="fade-up">
+<section id="legal-docs" class="section" data-aos="fade-up">
   <div class="section-title" data-aos="zoom-in">Документы и нормативные акты</div>
   <ul style="max-width: 800px; margin: 0 auto; padding-left: 1.2em; color: #2a4d32; font-size: 1.05em; line-height: 1.5;">
     <li>
-      <a href="http://publication.pravo.gov.ru/Document/View/0001201107010016" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
+      <a href="https://www.consultant.ru/document/cons_doc_LAW_108781/" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
         Федеральный закон от 01.07.2011 №170-ФЗ «О техническом осмотре транспортных средств и о внесении изменений в отдельные законодательные акты Российской Федерации»
       </a>
     </li>
     <li>
-      <a href="http://publication.pravo.gov.ru/Document/View/0001200812250015" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
+      <a href="https://www.consultant.ru/document/cons_doc_LAW_88260/" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
         Федеральный закон от 25.12.2008 №273-ФЗ «О противодействии коррупции»
       </a>
     </li>
     <li>
-      <a href="https://base.garant.ru/57498689/" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
+      <a href="https://base.garant.ru/57368889/" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
         2011 г. N 573 "Об утверждении формы типового договора о проведении технического осмотра" (с изменениями и дополнениями)
       </a>
     </li>
     <li>
-      <a href="http://publication.pravo.gov.ru/Document/View/0001202009150006" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
+      <a href="https://www.consultant.ru/document/cons_doc_LAW_366340/" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
         Постановление Правительства РФ от 15.09.2020 №1434 «Об утверждении Правил проведения технического осмотра транспортных средств»
       </a>
     </li>
     <li>
-      <a href="http://publication.pravo.gov.ru/Document/View/0001202005230002" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
-        Постановление Правительства РФ от 23.05.2020 № 741 (с изменениями 15.09.2020, 09.03.2022, 09.12.2023)
+      <a href="https://www.consultant.ru/document/cons_doc_LAW_354220/" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
+        Постановление Правительства РФ от 23.05.2020 № 741 (с изменениями)
       </a>
     </li>
     <li>
-      <a href="https://minenergo.bashkortostan.ru/media/documents/Postanovlenie-tarify-2025.pdf" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
+      <a href="https://pravitelstvorb.ru/documents/postanovleniya-pravitelstva/" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
         Постановление Правительства Республики Башкортостан о тарифах на 2025 г.
       </a>
     </li>
   </ul>
 </section>
-  </div>
+</div>
   <!-- Кнопка "Наверх" -->
   <button class="btn-top" id="btnTop" title="Наверх"><i class="fas fa-arrow-up"></i></button>
   <!-- Кнопка "Позвонить" (мобильная) -->
