--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
   <div class="section-title" data-aos="zoom-in">Документы и нормативные акты</div>
   <ul style="max-width: 800px; margin: 0 auto; padding-left: 1.2em; color: #2a4d32; font-size: 1.05em; line-height: 1.5;">
     <li>
-      <a href="https://www.consultant.ru/document/cons_doc_LAW_108781/" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
+      <a href="https://ivo.garant.ru/#/document/12187349/paragraph/1636:0" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
         Федеральный закон от 01.07.2011 №170-ФЗ «О техническом осмотре транспортных средств и о внесении изменений в отдельные законодательные акты Российской Федерации»
       </a>
     </li>
