--- a/index.html
+++ b/index.html
@@ -693,37 +693,37 @@
         <iframe src="https://yandex.ru/map-widget/v1/?ll=56.072328%2C54.805951&z=17&l=map&pt=56.072328,54.805951,pm2gnm" loading="lazy"></iframe>
       </div>
     </section>
-<section id="legal-docs" class="section" data-aos="fade-up">
+<section id="documents" class="section" data-aos="fade-up">
   <div class="section-title" data-aos="zoom-in">Документы и нормативные акты</div>
-  <ul style="max-width: 800px; margin: 0 auto; padding-left: 1.2em; color: #2a4d32; font-size: 1.05em; line-height: 1.5;">
+  <ul style="max-width: 800px; margin: 0 auto; font-size: 1.05em; line-height: 1.5; color: #333;">
     <li>
-      <a href="https://ivo.garant.ru/#/document/12187349/paragraph/1636:0" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
-        Федеральный закон от 01.07.2011 №170-ФЗ «О техническом осмотре транспортных средств и о внесении изменений в отдельные законодательные акты Российской Федерации»
+      <a href="https://ivo.garant.ru/#/document/12187349/paragraph/1636:0" target="_blank" style="color: var(--green); text-decoration: underline;">
+        1. Федеральный закон от 01.07.2011 №170-ФЗ «О техническом осмотре транспортных средств и о внесении изменений в отдельные законодательные акты Российской Федерации»
       </a>
     </li>
     <li>
-      <a href="https://www.consultant.ru/document/cons_doc_LAW_88260/" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
-        Федеральный закон от 25.12.2008 №273-ФЗ «О противодействии коррупции»
+      <a href="https://ivo.garant.ru/#/document/12164203/paragraph/2769/doclist/1824/1/0/0/%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9%20%D0%B7%D0%B0%D0%BA%D0%BE%D0%BD%20%D0%BE%D1%82%2025.12.2008%20%E2%84%96273-%D0%A4%D0%97%20%D0%9E%20%D0%BF%D1%80%D0%BE%D1%82%D0%B8%D0%B2%D0%BE%D0%B4%D0%B5%D0%B9%D1%81%D1%82%D0%B2%D0%B8%D0%B8%20%D0%BA%D0%BE%D1%80%D1%80%D1%83%D0%BF%D1%86%D0%B8%D0%B8:2" target="_blank" style="color: var(--green); text-decoration: underline;">
+        2. Федеральный закон от 25.12.2008 №273-ФЗ «О противодействии коррупции»
       </a>
     </li>
     <li>
-      <a href="https://base.garant.ru/57368889/" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
-        2011 г. N 573 "Об утверждении формы типового договора о проведении технического осмотра" (с изменениями и дополнениями)
+      <a href="https://ivo.garant.ru/#/document/12192261/paragraph/1/doclist/1827/1/0/0/2011%20%D0%B3.%20N%20573%20%22%D0%9E%D0%B1%20%D1%83%D1%82%D0%B2%D0%B5%D1%80%D0%B6%D0%B4%D0%B5%D0%BD%D0%B8%D0%B8%20%D1%84%D0%BE%D1%80%D0%BC%D1%8B%20%D1%82%D0%B8%D0%BF%D0%BE%D0%B2%D0%BE%D0%B3%D0%BE%20%D0%B4%D0%BE%D0%B3%D0%BE%D0%B2%D0%BE%D1%80%D0%B0%20%D0%BE%20%D0%BF%D1%80%D0%BE%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D0%B8%20%D1%82%D0%B5%D1%85%D0%BD%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B3%D0%BE%20%D0%BE%D1%81%D0%BC%D0%BE%D1%82%D1%80%D0%B0%22%20%20%D1%81%20%D0%B8%D0%B7%D0%BC%D0%B5%D0%BD%D0%B5%D0%BD%D0%B8%D1%8F%D0%BC%D0%B8%20%D0%B8%20%D0%B4%D0%BE%D0%BF%D0%BE%D0%BB%D0%BD%D0%B5%D0%BD%D0%B8%D1%8F%D0%BC%D0%B8:4" target="_blank" style="color: var(--green); text-decoration: underline;">
+        3. 2011 г. N 573 "Об утверждении формы типового договора о проведении технического осмотра"
       </a>
     </li>
     <li>
-      <a href="https://www.consultant.ru/document/cons_doc_LAW_366340/" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
-        Постановление Правительства РФ от 15.09.2020 №1434 «Об утверждении Правил проведения технического осмотра транспортных средств»
+      <a href="https://ivo.garant.ru/#/document/74671754/paragraph/1/doclist/1837/1/0/0/%D0%9F%D0%BE%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%9F%D1%80%D0%B0%D0%B2%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D1%81%D1%82%D0%B2%D0%B0%20%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%BE%D0%B9%20%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D1%86%D0%B8%D0%B8%20%D0%BE%D1%82%2015%20%D1%81%D0%B5%D0%BD%D1%82%D1%8F%D0%B1%D1%80%D1%8F%202020%20%D0%B3%D0%BE%D0%B4%D0%B0%20%E2%84%961434%20%D0%9E%D0%B1%20%D1%83%D1%82%D0%B2%D0%B5%D1%80%D0%B6%D0%B4%D0%B5%D0%BD%D0%B8%D0%B8%20%D0%9F%D1%80%D0%B0%D0%B2%D0%B8%D0%BB%20%D0%BF%D1%80%D0%BE%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D1%8F%20%D1%82%D0%B5%D1%85%D0%BD%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B3%D0%BE%20%D0%BE%D1%81%D0%BC%D0%BE%D1%82%D1%80%D0%B0%20%D1%82%D1%80%D0%B0%D0%BD%D1%81%D0%BF%D0%BE%D1%80%D1%82%D0%BD%D1%8B%D1%85%20%D1%81%D1%80%D0%B5%D0%B4%D1%81%D1%82%D0%B2,%20%D0%B0%20%D1%82%D0%B0%D0%BA%D0%B6%D0%B5%20%D0%BE%20%D0%B2%D0%BD%D0%B5%D1%81%D0%B5%D0%BD%D0%B8%D0%B8%20%D0%B8%D0%B7%D0%BC%D0%B5%D0%BD%D0%B5%D0%BD%D0%B8%D0%B9%20%D0%B2%20%D0%BD%D0%B5%D0%BA%D0%BE%D1%82%D0%BE%D1%80%D1%8B%D0%B5%20%D0%B0%D0%BA%D1%82%D1%8B%20%D0%9F%D1%80%D0%B0%D0%B2%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D1%81%D1%82%D0%B2%D0%B0%20%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%BE%D0%B9%20%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D1%86%D0%B8%D0%B8:6" target="_blank" style="color: var(--green); text-decoration: underline;">
+        4. Постановление Правительства Российской Федерации от 15 сентября 2020 года №1434 «Об утверждении Правил проведения технического осмотра транспортных средств…»
       </a>
     </li>
     <li>
-      <a href="https://www.consultant.ru/document/cons_doc_LAW_354220/" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
-        Постановление Правительства РФ от 23.05.2020 № 741 (с изменениями)
+      <a href="https://ivo.garant.ru/#/document/74172147/paragraph/1/doclist/1847/1/0/0/%D0%9F%D1%80%D0%B0%D0%B2%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D1%81%D1%82%D0%B2%D0%BE%20%D0%A0%D0%A4%20%D0%9F%D0%BE%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%D1%82%2023%20%D0%BC%D0%B0%D1%8F%202020%20%D0%B3.%20%E2%84%96%20741%20%20%D1%81%20%D0%B8%D0%B7%D0%BC%D0%B5%D0%BD%D0%B5%D0%BD%D0%B8%D1%8F%D0%BC%D0%B8%20%D0%B8%20%D0%B4%D0%BE%D0%BF%D0%BE%D0%BB%D0%BD%D0%B5%D0%BD%D0%B8%D1%8F%D0%BC%D0%B8%20%D0%BE%D1%82:0" target="_blank" style="color: var(--green); text-decoration: underline;">
+        5. Правительство РФ Постановление от 23 мая 2020 г. № 741 (с изменениями и дополнениями)
       </a>
     </li>
     <li>
-      <a href="https://pravitelstvorb.ru/documents/postanovleniya-pravitelstva/" target="_blank" rel="noopener noreferrer" style="color: var(--green); text-decoration: underline;">
-        Постановление Правительства Республики Башкортостан о тарифах на 2025 г.
+      <a href="https://www.garant.ru/hotlaw/bashkor/1793864/" target="_blank" style="color: var(--green); text-decoration: underline;">
+        6. Постановление Правительства Республики Башкортостан о тарифах на 2025 г.
       </a>
     </li>
   </ul>
